force-app/main/default/objects/Charge_Line__c/Charge_Line__c.object-meta.xml
<CustomObject>
    <description>Billable service line on a superbill.</description>
    <label>Charge Line</label>
    <nameField>
        <displayFormat>CHG-{00000000}</displayFormat>
        <label>Charge Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>