force-app/main/default/objects/Charge_Line__c/fields/Applied_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Unit_Rate__c</fullName>
    <description>Fee schedule unit rate applied before multiplying by units. For an override without a schedule, this is derived from the overridden line amount.</description>
    <label>Applied Unit Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>