force-app/main/default/objects/Charge_Line__c/fields/Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount__c</fullName>
    <label>Charge Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>