force-app/main/default/objects/Charge_Line__c/fields/Diagnosis_Pointers__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Pointers__c</fullName>
    <description>Comma-separated superbill diagnosis sequence numbers, for example 1,2.</description>
    <label>Diagnosis Pointers</label>
    <length>40</length>
    <type>Text</type>
</CustomField>