force-app/main/default/objects/Charge_Line__c/fields/Fee_Schedule_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Schedule Rate</label>
    <referenceTo>Fee_Schedule_Rate__c</referenceTo>
    <relationshipLabel>Charge Lines</relationshipLabel>
    <relationshipName>Charge_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>