force-app/main/default/objects/Charge_Line__c/fields/Modifiers__c.field-meta.xml
<CustomField>
    <fullName>Modifiers__c</fullName>
    <label>Modifiers</label>
    <length>40</length>
    <type>Text</type>
</CustomField>