force-app/main/default/objects/Charge_Line__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>