force-app/main/default/objects/Charge_Line__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Charge Lines</relationshipLabel>
    <relationshipName>Charge_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>