force-app/main/default/objects/Charge_Line__c/fields/Procedure_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code_System__c</fullName>
    <label>Procedure Code System</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetName>LogicEMR_Code_System</valueSetName></valueSet>
</CustomField>