force-app/main/default/objects/Charge_Line__c/fields/Procedure_Display__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Display__c</fullName>
    <label>Procedure Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>