force-app/main/default/objects/Charge_Line__c/fields/Procedure_Ref__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Code Reference</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Charge Lines</relationshipLabel>
    <relationshipName>Charge_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>