force-app/main/default/objects/Charge_Line__c/fields/Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>Rate_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Override</label>
    <type>Checkbox</type>
</CustomField>