force-app/main/default/objects/Charge_Line__c/fields/Rate_Source__c.field-meta.xml
<CustomField>
    <fullName>Rate_Source__c</fullName>
    <description>Snapshot of the fee schedule and effective period used to calculate this charge.</description>
    <label>Rate Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>