force-app/main/default/objects/Charge_Line__c/fields/Source_Procedure_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Procedure_Key__c</fullName>
    <description
  >Internal source procedure identifier retained after lookup deletion so encounter resync can remove generated charges while preserving manual charges.</description>
    <label>Source Procedure Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>