force-app/main/default/objects/Charge_Line__c/fields/Superbill__c.field-meta.xml
<CustomField>
    <fullName>Superbill__c</fullName>
    <label>Superbill</label>
    <referenceTo>Superbill__c</referenceTo>
    <relationshipLabel>Charge Lines</relationshipLabel>
    <relationshipName>Charge_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>