force-app/main/default/objects/Charge_Line__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Units</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>