force-app/main/default/objects/Charge_Line__c/validationRules/Override_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Rate_Override__c, ISBLANK(Override_Reason__c))</errorConditionFormula>
    <errorMessage>An override reason is required for an overridden charge.</errorMessage>
</ValidationRule>